assets/frontend/css/styles.css
/* ... */
/* Checkout errors */

ol#checkoutSteps li section form select.validation-failed {
    border: 1px solid;
}

ol#checkoutSteps li section form p.validation-advice {
    background: url(../images/cross.png) center left no-repeat;
    padding-left: 24px;
}


/* ----------------------------- MULTI-SHIPPING CHECKOUT */

div.multiple-checkout form {
    width: 80%;
}

div.multiple-checkout ul#payment_form_ccsave {
    width: 90%;
}

form#checkout_multishipping_form .title-buttons button {
    margin-top: -37px;
}

#multiship-addresses-table td select {
    width: 300px;
}

#multiship-addresses-table a.button {
    padding: 5px 0;
}

form#shipping_method_form table {
    margin: 10px 0;
}

div.col2-set div.col-narrow {
    width:30%;
}

div.col2-set div.col-wide {
    width:70%;
}

.checkout-progress {
    width: 70%;
    margin: 0 auto 20px;
}

.checkout-progress li {
    display: inline;
    margin: 15px;
}
.multiple-checkout .box {
    margin-bottom: 10px;
}

.multiple-checkout #checkout-review-submit {
    float: right;
}

.multiple-checkout .buttons-set p.back-link {
    float: left;
}

#review-buttons-container {
    float: right;
}

#review-buttons-container p.f-left {
    float: left;
}

.multiple-checkout #review-please-wait {
    float: right;
}

/* ----------------------------- CHECKOUT SIDEBAR YOUR CHECKOUT PROGRESS */

div.block-progress {
    margin-top: 35px;
}

div.sidebar div.block.block-progress div.block-title {
    border:0;
    margin-bottom:0;
    padding-bottom:0;
}

div.block-progress div.block-content ul {
    list-style-type: none;
}

div.block-progress div.block-content ul li {
    border-top: 1px solid;
    margin-top: 5px;
    padding-top: 5px;
}

div.block-progress div.block-content ul li a {
    float:right;
    margin-right:25px;
}

div.block-progress div.block-content ul li.complete {
    background: url(../images/tick.png) 162px 10px no-repeat;
}

div.block-progress div.block-content ul li.error {
    background: url(../images/cross.png) 162px 10px no-repeat;
}

/* ----------------------------- MY ACCOUNT */

.dashboard .welcome-msg {
    padding: 10px;
}

div.my-account {
    padding-top: 10px;
}

div.my-account h1 {
    border-bottom: 1px solid;
    margin-bottom: 15px;
    padding-bottom: 15px;
}

div.my-account div.box-account {
    border-top: 1px dotted;
    margin-top: 15px;
    margin-bottom: 20px;
    overflow: hidden;
    padding: 10px;
}

div.my-account div.box-account div.box-head h2 {
    border-bottom: 1px solid;
    margin-bottom: 20px;
}

div.my-account div.box-account div.box-head h2 + a {
    float:right;
    margin-top: -57px;
}

div.my-account div.box-account div.box-title {
    border-bottom: 1px dotted;
    margin-bottom: 10px;
}

div.my-account div.box-account div.box-title a {
    float: right;
    margin-top: -35px;
}

div.my-account div.box-account div.col2-set {
    margin-bottom: 25px;
    width: 700px;
}

div.my-account div.box-account div.col-1 div.box {
    padding-right: 40px;
}

div.my-account div.box-account div.col-2 div.box {
    padding-right: 20px;
}

div.my-account div.addresses-list {
    margin-bottom: 20px;
}

div.my-account div.addresses-list + div.buttons-set { 
    clear: both;
    float: right;
}

div.my-account div.addresses-additional {
    clear: both;
}

div.my-account div.addresses-additional li {
    margin-bottom: 10px;
}

div.my-account form {
    margin: 0 auto;
    padding: 10px;
    width: 50%;
}

div.my-account form fieldset,
#create-account fieldset {
    border-bottom: 1px dotted;
    margin-bottom: 10px;
}

form#contactForm input,
div.my-account form fieldset input.text,
div.my-account form fieldset input[type="text"],
div.my-account form fieldset textarea,
div.my-account form fieldset select {
    width: 100%;
}

div.my-account form div.buttons-set {
    overflow: hidden;
}

div.my-account form div.buttons-set button {
    float: right;
    margin-left: 10px;
}

div.my-account div.addresses-primary ol li {
    margin-bottom:10px;
}

div.my-account div.order-actions {
    float:right;
}

div.my-account dl.order-info,
div.my-account div.order-items {
    clear:both;
}

/* ------------------------------ REMEMBER ME */
.window-overlay { 
    background:url(../images/window_overlay.png) repeat;
    background:rgba(0, 0, 0, 0.35); 
    position:absolute; 
    top:0; 
    left:0; 
    height:100%; 
    width:100%; 
    z-index:990;
}

.remember-me label { 
    float:none;
    margin:0 6px;
}

.remember-me-popup { 
    background:#fff; 
    border:1px solid #ccc;
    left:50%; 
    top:50%; 
    position: fixed; 
    margin:-85px 0 0 -200px; 
    width:400px; 
    text-align:left; 
    -moz-box-shadow:0 0 6px #ccc; 
    -webkit-box-shadow:0 0 6px #ccc; 
    -box-shadow:0 0 6px #ccc; 
    z-index:1000; 
}

.remember-me-popup h3 { 
    background:#d9e5ee; 
    border-bottom:1px solid #ccc; 
    font-size:14px; 
    padding:5px 10px; 
}

.remember-me-popup .remember-me-popup-head { 
    position:relative; 
}

.remember-me-popup .remember-me-popup-head .remember-me-popup-close { 
    background:url(../images/btn_window_close.gif) no-repeat; 
    display:block; 
    position:absolute; 
    top:7px; 
    right:7px; 
    height:15px; 
    width:15px; 
    text-indent:-9999em; 
}

.remember-me-popup .remember-me-popup-body { 
    padding:10px; 
}

.remember-me-popup .remember-me-popup-body a { 
    display:inline-block; 
    height:19px; 
    border:1px solid #de5400; 
    background:#f18200; 
    padding:0 8px; 
    font:bold 12px/19px Arial, Helvetica, sans-serif; 
    text-align:center; 
    text-decoration:none; 
    white-space:nowrap; 
    color:#fff; 
}

/* ----------------------------- MY ACCOUNT NAVIGATION SIDEBAR */

div.block-account div.block-content ul {
    list-style-type: none;
}

div.block-account div.block-content ul li {
    border-top: 1px solid;
    margin-top: 5px;
    padding-top: 5px;
}

div.block-account div.block-content ul li:first-child {
    border-top:0;
}
/* ... */

